# python-class-query

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
clsquery/: __init__.py  cli.py  constants.py  convert_classes_to_table.py  custom_logger.py  default_formatter.py  errors.py  filter_by_types.py  format_list.py  format_table.py  get_classes_at_path.py  get_classes_from_paths.py  get_time.py  has_supertype.py  query.py
clsquery/classes/: class_query.py  class_query_formatter.py  class_query_item.py  class_query_results.py  preset.py  search_metadata.py
tests/: test_query.py
