[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clsquery"
version = "1.1"
authors = [
  { name="Kenneth Mead", email="kennethmead784@gmail.com" },
]
description = "A package for querying Python classes"
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
    "Programming Language :: Python :: 3",
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python',
]
dependencies = [
    "pytz"
]

[project.urls]
"Homepage" = "https://github.com/Xerner/python-class-query"
